--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!-- powered by Book Brackets http://djmcloud.danieljmckeown/bookbrackets/ v0.8.0 copyright 2015 by Dan McKeown http://danmckeown.info -->
+<!DOCTYPE html><!-- powered by Book Brackets http://djmcloud.danieljmckeown/bookbrackets/ v0.9.0 copyright 2015 by Dan McKeown http://danmckeown.info -->
 <html>
 <head>
 <meta charset="UTF-8">
@@ -98,7 +98,7 @@
 
 	  <script src='js/jquery-1.11.2.min.js'></script>
 	  <script src='js/mustache.js'></script>
-	  <script src="js/BookContent.js"></script>
+	  <script src="data/BookContent.js"></script>
 	  <script type="text/javascript" src="js/materialize.js"></script>
 
   	<script>
